[package]
name = "radix-engine-tests"
version = "1.3.0"
edition = "2021"
build = "build.rs"

[dependencies]
radix-native-sdk = { workspace = true }
sbor = { workspace = true, features = ["serde"] }
radix-engine = { workspace = true, features = ["radix_engine_tests", "test_utils"] }
radix-engine-interface = { workspace = true }
radix-common = { workspace = true, features = ["serde"] }
radix-substate-store-interface = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-substate-store-queries = { workspace = true }
radix-transactions = { workspace = true }
radix-transaction-scenarios = { workspace = true }
radix-blueprint-schema-init = { workspace = true }
radix-rust = { workspace = true }
radix-engine-profiling = { workspace = true, optional = true, features = [
    "resource_tracker",
] }
radix-engine-toolkit-common = { workspace = true }
radix-engine-profiling-derive = { workspace = true }
scrypto-test = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
radix-transactions = { workspace = true }
wabt = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
scrypto = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true }
walkdir = { workspace = true }
paste = { workspace = true }
hex = { workspace = true }
trybuild = { workspace = true }
extend = { workspace = true }
secp256k1 = { workspace = true }

[build-dependencies]
walkdir = { workspace = true, optional = true }
cargo_toml = { workspace = true, optional = true }
scrypto = { workspace = true }
scrypto-test = { workspace = true }

[[bench]]
name = "costing"
harness = false

[[bench]]
name = "radiswap"
harness = false

[[bench]]
name = "transfer"
harness = false

[[bench]]
name = "resources_usage"
harness = false
required-features = ["cpu_ram_metrics"]

[[bench]]
name = "transaction_processing"
harness = false

[[bench]]
name = "transaction_validation"
harness = false

[[bench]]
name = "metadata_validation"
harness = false

[lib]
# Our benches use criterion.rs - which requires disabling normal bench harness
# generation below - to workaround this issue:
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

# Marks that this is not a library with unit tests - but integration tests still run.
# See https://doc.rust-lang.org/cargo/commands/cargo-test.html
test = false

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = [
    "sbor/std",
    "radix-transactions/std",
    "radix-blueprint-schema-init/std",
    "radix-common/std",
    "radix-transaction-scenarios/std",
    "radix-engine/std",
    "radix-engine/moka",
    "radix-engine/flamegraph",
    "radix-engine-toolkit-common/std",
    "radix-engine-interface/std",
    "radix-substate-store-impls/std",
    "radix-substate-store-interface/std",
    "radix-substate-store-queries/std",
    "radix-rust/std",
    "scrypto/std",
    "scrypto-test/std",
    "scrypto-test/std",
    "scrypto-test/moka",
]
alloc = [
    "sbor/alloc",
    "radix-transactions/alloc",
    "radix-blueprint-schema-init/alloc",
    "radix-common/alloc",
    "radix-transaction-scenarios/alloc",
    "radix-engine/alloc",
    "radix-engine/lru",
    "radix-engine/flamegraph",
    "radix-engine-toolkit-common/alloc",
    "radix-engine-interface/alloc",
    "radix-substate-store-impls/alloc",
    "radix-substate-store-interface/alloc",
    "radix-substate-store-queries/alloc",
    "radix-rust/alloc",
    "scrypto/alloc",
    "scrypto-test/alloc",
    "scrypto-test/alloc",
    "scrypto-test/lru",
]
cpu_ram_metrics = ["radix-engine/cpu_ram_metrics"]
flamegraph = []
resource_tracker = [
    "dep:radix-engine-profiling",
    "radix-engine-profiling-derive/resource_tracker",
    "radix-engine/resource_tracker",
    "radix-common/resource_tracker",
    "scrypto-test/resource_tracker",
]
dump_manifest_to_file = ["radix-transactions/dump_manifest_to_file"]
rocksdb = ["scrypto-test/rocksdb"]
post_run_db_check = ["scrypto-test/post_run_db_check"]

# If this feature is enabled, this crate will compile all of the blueprints ahead of time and make
# them available for use.
compile-blueprints-at-build-time = ["dep:walkdir", "dep:cargo_toml"]
