[package]
name = "radix-engine-toolkit-common"
version = "1.3.0"
edition = "2021"
description = "Types and functions added to this repository to be shared between the radix-engine-toolkit-common and consumers of the engine, from the Radix DLT project."
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/radixdlt/radixdlt-scrypto"

[dependencies]
sbor = { workspace = true }
radix-common = { workspace = true, features = ["serde"] }
radix-engine-interface = { workspace = true }
radix-rust = { workspace = true }
radix-engine = { workspace = true }

# Serde dependencies - primarily used in the RET's receipt.
serde = { workspace = true }
serde_with = { workspace = true }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = [
    "sbor/std",
    "radix-engine-interface/std",
    "radix-rust/std",
    "radix-common/std",
    "radix-engine/std",
    "radix-engine/moka",
    "serde/std",
    "serde_with/std",
]
alloc = [
    "sbor/alloc",
    "radix-engine-interface/alloc",
    "radix-rust/alloc",
    "radix-common/alloc",
    "radix-engine/alloc",
    "radix-engine/lru",
    "serde/alloc",
    "serde_with/alloc",
]

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
