[package]
name = "radix-native-sdk"
version = "1.2.0-dev"
edition = "2021"
license = "Radix License 1.0"
description = "A library for developing native blueprints."

[dependencies]
sbor = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-rust = { workspace = true }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "radix-engine-interface/std", "radix-rust/std", "radix-common/std"]
alloc = ["sbor/alloc", "radix-engine-interface/alloc", "radix-rust/alloc", "radix-common/alloc"]

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
doctest = false
bench = false
