[package]
name = "radix-native-sdk"
version = "1.3.0"
edition = "2021"
description = "A library for developing native blueprints, from the Radix DLT project."
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/radixdlt/radixdlt-scrypto"

[dependencies]
sbor = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-rust = { workspace = true }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "radix-engine-interface/std", "radix-rust/std", "radix-common/std"]
alloc = ["sbor/alloc", "radix-engine-interface/alloc", "radix-rust/alloc", "radix-common/alloc"]

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
